source/stylesheets/_variables.sass
// Variables

// Fonts

$font:                         "Helvetica Neue", Helvetica, Sans-Serif
$code:                         "Monaco", Menlo, Courier
$icons:                        "icons", helvetica, Sans-Serif

// App Colors

$header:                       #FFF
$notice:                       #FFE0A3
$body:                         #FAFAFA
$page:                         #FFF

// Base Colors

$white:                        #FFF
$gray-lightest:                #F9F9F9
$gray-lighter:                 #EEE
$gray-light:                   #BBB
$gray-medium:                  #999
$gray:                         #666
$gray-dark:                    #333
$black:                        #000
$red:                          #C9282E
$red-bright:                   #FF0008
$orange:                       #E16E00
$yellow:                       #D5B778
$green:                        #6BAF56
$blue:                         #5A9FC8

// Background Colors

$bg-gray-lgihter:              $gray-lighter
$bg-transparent:               rgba(0,0,0,0.1)
$bg-tab:                       $gray-light

// Gradated Background Colors

$bg-red:                       linear-gradient(to bottom right, #C9282E, #A60052)
$bg-red-fallback:              #A8002D

$bg-black:                     linear-gradient(to bottom right, #222, #333)
$bg-black-fallback:            #252525

$bg-green:                     linear-gradient(to bottom right, #73B558, #45D093)
$bg-green-fallback:            #52BB5C

$bg-gray:                      linear-gradient(to bottom right, #888, #CCC)
$bg-gray-fallback:             #9A9A9A

$bg-blue:                      linear-gradient(to bottom right, #25639A, #1F9CEA)
$bg-blue-fallback:             #1C6AB9

// Hover

$link:                         $red
$hover:                        $red-bright
$focus:                        rgba(255,0,0,0.2)

// Header

$header-height:                4.25em
$header-link-hover:            #F5F5F5

// Typography

$text:                         #444
$bold:                         500

// Transitions

$standard-animation-speed:     200ms
$all:                          all $standard-animation-speed ease-in-out
$color:                        color $standard-animation-speed ease-in-out

// GPU Trickery

$translate:                    translateZ(0)

// Radius

$radius:                       0.15em
$round:                        99em

// Grid

$grid-padding:                 2%

// Loaders

$loader-large: 48px
$loader: 32px
$loader-small: 16px
$loader-smallest: 9px

// Forms

$size:                         1em
$border-width:                 1px
$input-left-right-padding:     0.5em
$input-checkbox-checked:       $link
$input-background-color:       #FFF
$input-height:                 2.7em

// Breakpoints

$desktop-large:                1680px
$desktop:                      1440px
$laptop:                       1280px
$tablet:                       1080px
$phablet:                      860px
$phablet-handheld:             780px
$handheld:                     667px
$handheld-landscape:           334px

// Characters

$non-breaking-space:           '\00a0'

// Mixins

@mixin appearance-none
  -moz-appearance:             none
  -o-appearance:               none
  -ms-appearance:              none
  -webkit-appearance:          none
  appearance:                  none

// Vectors

$svg-arrow-updown: 'data:image/svg+xml;utf8,<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="512px" height="512px" viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve"><polyline points="114.3,212.8 388,212.8 251.1,0 114.3,212.8 "/><polyline points="388,297.9 114.3,297.9 251.1,510.7 388,297.9 "/></svg>'

